--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,22 +5,24 @@
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
 	</head>
 	<body>
-    <div id="wrapper" class="{% if frames %}frames{% endif %}">
+		<div id="wrapper">
+
 			<header>
 				<h1><a href="/">Inspector Gifget</a></h1>
 			</header>
 			
-			{% block body %}{% endblock %}
-			
 			<footer>
-				Written in <a href="http://flask.pocoo.org/">Flask</a>.  
-				Hosted on <a href="http://heroku.com">Heroku</a>.  
-				Forked on <a href="https://github.com/trg/GIF-Explode">Github</a>.
-				Thanks to <a href="http://gif-explode.com/">Gif Explode</a>.
-				<!--View the source on <a href="https://github.com/trg/GIF-Explode">Github</a>.-->
+				Forked from 
+				<a href="http://gif-explode.com/">Gif Explode</a> 
+					on <a href="https://github.com/trg/GIF-Explode">Github</a>. 
+					View source.
+					<a href="http://www.rexfeng.com">rf 2012</a>
 			</footer>
+			
+			{% block body %}{% endblock %}
+
+		  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+			<script src="{{ url_for('static', filename='custom.js') }}"></script>
 		</div>
-	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-		<script src="{{ url_for('static', filename='custom.js') }}"></script>
 	</body>
 </html>
