--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 
       <div id="frame">
         <div id="frameimg2" class="frameimg"></div>
-        <div id="frameimg1" class="frameimg"></div>
+        <div id="frameimg1" class="frameimg">Loading ...</div>
       </div>
 
       <script>
