slight update layout copy

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,11 +12,9 @@
 			</header>
 			
 			<footer>
-				Forked from 
-				<a href="http://gif-explode.com/">Gif Explode</a> 
-					on <a href="https://github.com/trg/GIF-Explode">Github</a>. 
-					View source.
-					<a href="http://www.rexfeng.com">rf 2012</a>
+				<a href="https://github.com/xta/GIF-Explode">Forked</a> from 
+				<a href="http://gif-explode.com/">Gif Explode</a>. 
+				by <a href="http://www.rexfeng.com">rf 2012</a>.
 			</footer>
 			
 			{% block body %}{% endblock %}
