--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,49 @@
-body, input, form {
+body, form {
   margin: 0;
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
+  text-rendering: optimizelegibility;
+  text-align: left;
+  background-color: #fff;
+}
+
+a:link,a:active,a:visited {
+  text-decoration: none !important;
+  border-bottom: 1px solid #39c !important;
+  color: #39c !important; 
+}
+
+a:hover {
+  text-decoration: none; 
+  border-bottom: 1px dashed #39c  !important;
+  color: #39c !important;
+}
+
+p {
+  text-indent: 30px;
+}
+
+input { 
+  padding: 10px; 
+  font-size: 24px; 
+}
+
+.button { /* via http://www.cssnewbie.com/cross-browser-rounded-buttons/ */
+  display: inline-block;
+  line-height: 1;
+  padding: 7px 10px;
+  text-decoration: none;
+  font-weight: bold;
+  color: #fff;
+  background-color: #39c;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+}
+
+input.button, button.button {
+  border: 0px none;
 }
 
 #tagline {
@@ -10,7 +52,7 @@ body, input, form {
 }
 
 #input-url {
-  padding: 30px 0 0 30px;
+  padding: 10px 0 20px 0;
 }
 
 #wrapper {
@@ -19,20 +61,23 @@ body, input, form {
   display: table;
 }
 
-header {}
-
 footer {
-  margin: 20px 0 30px 0;
+  width: 100%;
+  position: absolute;
+  padding: 20px;
+  bottom: 20px;
+}
+
+#slider {
+  font-size: 62.5%;
 }
 
 #player {
-  padding: 30px;
-}
-
-#frame img{
+  margin-top: 30px; 
 }
 
 .frameimg {
+  top: 200px;
   position: absolute;
 }
 
@@ -45,9 +90,8 @@ footer {
 }
 
 #counter {
-  margin-bottom: 20px;
+  width: 100%;
+  position: absolute;
+  padding: 20px;
+  bottom: 50px; 
 }
-#currentCount {}
-#totalCount {}
-
-#control {}
