--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Inspector Gifget - frame by frame .gif viewer</title>
+		<title>Inspector Gifget</title>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
+		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
 		<div id="wrapper">
@@ -11,16 +12,29 @@
 				<h1><a href="/">Inspector Gifget</a></h1>
 			</header>
 			
-			<footer>
-				<a href="https://github.com/xta/GIF-Explode">Forked</a> from 
-				<a href="http://gif-explode.com/">Gif Explode</a>. 
-				by <a href="http://www.rexfeng.com">rf 2012</a>.
-			</footer>
+  		<div id="tagline">Inspect your .gif(s) - get your frames slow, fast, or in reverse.</div>
 			
 			{% block body %}{% endblock %}
 
+			<footer>
+				<a href="https://github.com/xta/GIF-Explode">Forked</a> from 
+				<a href="http://gif-explode.com/">Gif Explode</a>. 
+				By <a href="http://www.rexfeng.com">rf 2012</a>.
+			</footer>
+
 		  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 			<script src="{{ url_for('static', filename='custom.js') }}"></script>
+			<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+			<script type="text/javascript">
+				var _gaq = _gaq || [];
+				_gaq.push(['_setAccount', 'UA-34257626-1']);
+				_gaq.push(['_trackPageview']);
+				(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+				})();
+			</script>
 		</div>
 	</body>
 </html>
